<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/formScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/surface_full"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Heading -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title -->
            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/display"
                android:gravity="center"
                android:text="@string/login_heading"
                android:textColor="@android:color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Subtitle -->
            <TextView
                android:id="@+id/loginSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/login_subheading"
                android:textColor="@color/muted"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="vertical">

            <!-- Username input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/uUsername"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inp_username_text"
                app:errorEnabled="true"
                app:placeholderTextColor="@color/onSurface">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/uPassword"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/inp_password_text"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:placeholderTextColor="@color/onSurface">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <!-- Login button -->
            <Button
                android:id="@+id/btnLogin"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/btn_login"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <!-- Create account button -->
            <Button
                android:id="@+id/btnRegister"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="4dp"
                android:text="@string/btn_register"
                android:textAllCaps="true"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>